# ai-tutor-agent

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: dictation.py  grader.py  knowledge_extractor.py  observer.py  proctor.py  question_gen.py  summarizer.py
app/api/: agent.py  classroom.py  command.py  homework.py  ingest.py  report.py  summary.py  ws.py
app/core/: app_context.py  asr_client.py  classroom_session_manager.py  event_bus.py  schedulers.py  settings.py  state_manager.py  summarization.py  task_dispatcher.py
app/infra/: redis_fact_store.py
app/llm/: ark_client.py
app/multimodal/: audio_buffer.py  text_buffer.py  video_buffer.py
app/schema/: agent_command.py  classroom.py  classroom_queries.py  command.py  events.py  homework.py  ingest.py  report.py  summary.py
tests/: manual_e2e.py
