[project]
name = "ai-tutor-agent2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope>=1.0.11",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "redis>=5.0.0",
    "uvicorn>=0.40.0",
]
